dom/media/ipc/VideoDecoderParent.cpp
@@ -148,6 +148,7 @@ mozilla::ipc::IPCResult VideoDecoderParent::RecvInput(
   data->mTimecode = aData.base().timecode();
   data->mDuration = aData.base().duration();
   data->mKeyframe = aData.base().keyframe();
+  data->mEOS = aData.eos();
 
   DeallocShmem(aData.buffer());
 
